--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <title>Blockchain Stuff</title>
-    <meta http-equiv="refresh" content="0; URL=https://rudolfachter.github.io/blockchain-stuff/public/">
+    <title>Chiania</title>
+    <meta http-equiv="refresh" content="0; URL=https://rudolfachter.github.io/chiania/public/">
 </head>
 <body>
 
