--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; URL=https://rudolfachter.github.io/chiania/public/">
 </head>
 <body>
-
+    Redirecting...
 </body>
 </html>
