--- a/public/items/02_collectables/index.html
+++ b/public/items/02_collectables/index.html
@@ -448,10 +448,9 @@ After defeating the slimes the adventurers canned them into bottles. Maybe they 
 <img alt="" class="game_item" src="https://rqkaeyrvtvtkfwurlof6eemqszjjdtwyflndwzkhlu3b3wmxmi.arweave.net/jBQCYjWdZqLakVuL_4hGQllKRztgq2jtlR102HdmXYo" />
 </td></p>
 <td>
-<span markdown="1"><strong>Canned Slime</strong></span>
+<span markdown="1"><strong>Large Monster Nuclei</strong></span>
 <span markdown="1"><strong>Collectable:</strong> 1</span>
-A poor slime is canned in this bottle. The slime tries to escape.... 
-After defeating the slimes the adventurers canned them into bottles. Maybe they are good for something?
+The heart of a monster.
 </td>
 </tr>
 </table>
