--- a/public/items/02_collectables/index.html
+++ b/public/items/02_collectables/index.html
@@ -450,7 +450,27 @@ After defeating the slimes the adventurers canned them into bottles. Maybe they 
 <td>
 <span markdown="1"><strong>Large Monster Nuclei</strong></span>
 <span markdown="1"><strong>Collectable:</strong> 1</span>
-The heart of a monster.
+The heart of a monster. Ripped out of the corpse of a slimy monster after a fierce battle. The master druid would give rewards for them
+</td>
+</tr>
+<tr>
+<p><td markdown="1">
+<img alt="" class="game_item" src="https://3ni2yzhtgqhcofi25qfydn5tmhkfxpciv62if6rl2iycoy6g4u.arweave.net/21GsZPM0DicVGuwLgbezYdRbvEivt-IL6K9IwJ2PG5Q" />
+</td></p>
+<td>
+<span markdown="1"><strong>Medium Monster Nuclei</strong></span>
+<span markdown="1"><strong>Collectable:</strong> 1</span>
+The heart of a monster. Ripped out of the corpse of a slimy monster after a fierce battle. The master druid would give rewards for them
+</td>
+</tr>
+<tr>
+<p><td markdown="1">
+<img alt="" class="game_item" src="https://ud3babzzbstvywa64glet3uwpjq5wyrg3tp4plus7zp6zgix.arweave.net/oPYQBzkMp1xYHuGWSe6WemHb_Yibc38eukv5f7Jk_Xc" />
+</td></p>
+<td>
+<span markdown="1"><strong>Small Monster Nuclei</strong></span>
+<span markdown="1"><strong>Collectable:</strong> 1</span>
+The heart of a monster. Ripped out of the corpse of a slimy monster after a fierce battle. The master druid would give rewards for them
 </td>
 </tr>
 </table>
