--- a/public/items/02_collectables/index.html
+++ b/public/items/02_collectables/index.html
@@ -429,7 +429,8 @@
 <div class="chia_rpg_story">
 <h1 id="collectables">Collectables</h1>
 <ul>
-<li><a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx</a></li>
+<li><a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">SpaceSpan.io - ChiaInventory</a></li>
+<li><a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">MintGarden - Chia Inventory</a></li>
 </ul>
 <table class="item_table">
 <tr>
