--- a/public/items/02_collectables/index.html
+++ b/public/items/02_collectables/index.html
@@ -431,6 +431,7 @@
 <ul>
 <li><a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">SpaceSpan.io - ChiaInventory</a></li>
 <li><a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">MintGarden - Chia Inventory</a></li>
+<li><a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <table class="item_table">
 <tr>
