--- a/public/02_story/index.html
+++ b/public/02_story/index.html
@@ -527,6 +527,7 @@ To organize themselves the volunteers now meet in a magical tavern named "Discor
 <p><img alt="" class="story_pic_left" src="https://oyg6gxbraujl6kd5p5cmvs2t6jalqzhkroc54446zapitze3.arweave.net/dg3jXDEFEr8ofX9Ey-stT8kC4ZOqLhd5znsge-ieSbw" /></p>
 <h2 id="deers-under-control-of-slimes">Deers under control of slimes</h2>
 <p>After the fierce battle in the forest, some alert adventurers spotted strange creatures wandering. On closer inspection, they noticed that slimes took control of some deers. After careful attempts, they managed to tame and take the deers to a safe place.</p>
+<p>The deers are slimed and injured. Some adventurers try to find some medicine to threat the deers and bring them to good health again</p>
 <hr style="clear:both">
 <p><img alt="" class="story_pic_right" src="https://rqkaeyrvtvtkfwurlof6eemqszjjdtwyflndwzkhlu3b3wmxmi.arweave.net/jBQCYjWdZqLakVuL_4hGQllKRztgq2jtlR102HdmXYo" />
 The volunteers that were able to kill a slime monster investigeted them further and found monster nucleis where their heart should be. Just like the master druid said. they take monster nucleis from corpses of slimes, which could also be a prove of combat for exchanging the rewards from the master druid.</p>
