--- a/public/index.html
+++ b/public/index.html
@@ -492,7 +492,10 @@
 <div class="chia_rpg_story">
 <h1 id="chiania-the-chia-inventory-rpg-game">Chiania - The Chia Inventory RPG Game</h1>
 <h2 id="where-to-play">Where to play?</h2>
-<p>At this time "Chia Inventory - the Chianian Quest" is played in Discord. <a href="https://discord.gg/pDGJf5f6">Join here (Discord Channel - Chia Inventory)</a></p>
+<p>At this time "Chia Inventory - the Chianian Quest" is played in Discord.</p>
+<ul>
+<li><a href="https://discord.gg/pDGJf5f6">Join here (Discord Channel - Chia Inventory)</a></li>
+</ul>
 <h2 id="introduction"><a href="https://discordapp.com/channels/994949585657143296/995478713561001984/995479550848933930">Introduction</a></h2>
 <p>"Chia Inventory" is a RPG-style NFT collection, with an unique NFT releasing conecpt: all of the NFTs are items generated during our RPG gaming process.</p>
 <p><a href="https://twitter.com/mrcic3">Green Whale</a> Is playing as a storyteller and blacksmith in this endless RPG game. He continuously releases stories, quests, and events. Players who bought our NFT equipment are able to  join endless quests and events, and win more NFTs for free.</p>
