--- a/public/02_story/index.html
+++ b/public/02_story/index.html
@@ -609,7 +609,7 @@
 
 <div class="chia_rpg_story">
 <h1 id="the-story-of-chiania">The Story of Chiania</h1>
-<p>To edit something -&gt; <a href="https://github.com/RudolfAchter/chiania/blob/main/docs/02_story.md">click here (GitHub/Rudolf Achter/chiania)</a></p>
+<p>To edit something -&gt; <a href="https://github.com/RudolfAchter/chiania/blob/main/docs/02_story.md">click here (GitHub/Rudolf Achter/chiania)</a>. Your edit will be reviewed and (when it's good) included.</p>
 <h2 id="the-world">The World</h2>
 <p><img alt="" class="story_pic" src="../2022-07-21-19-12-35.png" style="max-width: 100%; width:100%" /></p>
 <p><img alt="" class="story_pic_left" src="../media/01_quest_start.jpg" style="" /></p>
