--- a/public/04_world/index.html
+++ b/public/04_world/index.html
@@ -549,6 +549,7 @@
 
 
 <h1 id="the-world-of-chiania">The World of Chiania</h1>
+<p>TODO Description of the word. World maps and so on</p>
 
               
             </article>
