--- a/public/00_tags/index.html
+++ b/public/00_tags/index.html
@@ -722,7 +722,8 @@
     <div class="md-copyright__highlight">
       This site is community run and is not affiliated with the Chia Network.
 I am doing this in my free time as a hobby.<br/>
-Send coffee to: <strong>xch1wpdejgk86sh2mxwp3jrzrzftdh6et9en8cm9hzaw7xgf9h44p4usdjtypc</strong> (XCH | USDS | SMOON 🔜)
+Send coffee to: <strong>xch1wpdejgk86sh2mxwp3jrzrzftdh6et9en8cm9hzaw7xgf9h44p4usdjtypc</strong> (XCH | USDS | SMOON 🔜)<br/>
+You have a chiania item (NFT that you don't need anymore) for me? <br/>Send your mild gift to: <span style="color: #c5e1a5;">xch1t707p8usz9x3zx8ktdfcnuvqj709unclwqdxxshla0x3ytlkd58sucl8cf</span>
 
     </div>
   
