--- a/public/ideas/99_ideas/index.html
+++ b/public/ideas/99_ideas/index.html
@@ -582,6 +582,7 @@
 
 
 <h1 id="ideas-for-the-world">Ideas for the world</h1>
+<p><a href="https://github.com/RudolfAchter/chiania/blob/main/docs/ideas/99_ideas.md">edit here (GitHub/Rudolf Achter/chiania)</a>. Your edit will be reviewed and (when it's good) included.</p>
 <p>The world of chiania is growing while playing. Items / NFTs are minted on the go. The story can evolve day by day. Bring in your ideas. The documentations following on this page are just ideas. These things arent necessarily implemented in the game</p>
 <h2 id="magic">Magic</h2>
 <p>In a fantasy world like Chiania there should be magic. So also there would be a magic fighting system. Classical things i know are based on elements like:</p>
