--- a/public/items/01_equipment/index.html
+++ b/public/items/01_equipment/index.html
@@ -643,6 +643,18 @@ A sword for general purpose.
 </tr>
 <tr>
 <p><td markdown="1">
+<img alt="" class="game_item" src="https://qzdlypw6klqlorogiy64yyfjg2lfou264giu3yc2nqovxegcla.arweave.net/hka8Pt5S4LdFxkY9_zGCpNpZXU17hkU3gWmwdW5DCWI" />
+</td></p>
+<td>
+<span markdown="1"><strong>Khopesh</strong></span>
+<span markdown="1"><strong>Slash:</strong> 1</span>
+<span markdown="1"><strong>Bash:</strong> 1</span>
+<span markdown="1"><strong>Pierce:</strong> 1</span>
+A standard weapon for soldiers of Chiania Kingdom.
+</td>
+</tr>
+<tr>
+<p><td markdown="1">
 <img alt="" class="game_item" src="https://mhrslttczhebs6uvexv4qlpj6tpqtom27eawplxiuhtt6npwwodq.arweave.net/YeMlzmLJyBl6lSXryC3p9N8JuZr5AWeu6KHnPzX2s4c" />
 </td></p>
 <td>
