--- a/public/02_story/index.html
+++ b/public/02_story/index.html
@@ -670,7 +670,7 @@ The volunteers saw a first small glimpse of the threat approaching chiania. "We 
 <p><img alt="" class="story_pic_right" src="https://cdn.discordapp.com/attachments/995484176428044378/999473901346242590/Enhanced_Tree_Root_12.gif" style="" />
 The master druid holds aloft his wand, pure energy are emitted and hitted the ground. Tree roots abnormally grow and show up on the ground. These roots are surrounding by green and yellow magic. The druid ask volunteers to cut roots into sections as weapons.
 <img alt="" class="story_pic_left" src="../media/discord_pixel.png" style="max-width:100px;" />
-To organize themselves the volunteers now meet in a magical tavern named "Discord". They bind their souls to this magical place so that they can always come back to this place whereever they are.</p>
+To organize themselves the volunteers now meet in <a href="https://discord.gg/YfgU3ueD">Discord square</a> in the <a href="https://discord.com/channels/994949585657143296/995483089881026631">magical tavern</a> named. They bind their souls to this magical place so that they can always come back to this place whereever they are.</p>
 <p>The now bigger an better equipped group went deeper in the black forest to reduce the slime population. They encountered a group of forest slimes...</p>
 <p>After a fierce battle, volunteers defeated a total of 20 Forest Slimes. Volunteers decided to enter the deep forest to hunt for stronger preys, Aquatic Slimes and Swamp Slimes</p>
 <hr style="clear:both">
@@ -687,6 +687,17 @@ The volunteers that were able to kill a slime monster investigeted them further 
 <h2 id="the-master-druid-was-killed">The master druid was killed!</h2>
 <p><img alt="" class="story_pic_left" src="https://cdn.discordapp.com/attachments/995496698086432838/1000325786554880030/Head_of_master_druid.png" />
 The brave volunteers who got a monster nucleis went to the hut in the western woods where the master druid lives. They kocked at the door, nobody answered. They begun to search him. A few meters deeper in the woods they only found his corpse. The head of master druid was cut off and was threw five meter away from his body. "How master druid, a hemigod in Chiania, was killed?" More importantly, where's the reward of quest?</p>
+<hr style="clear:both">
+
+<p>To get the latest news in chiania go to certain places:</p>
+<ul>
+<li><a href="https://discord.com/channels/994949585657143296/995945537603911770">Chiania News</a></li>
+<li><a href="https://discord.com/channels/994949585657143296/995484176428044378">Chiania Events</a></li>
+<li><a href="https://discord.com/channels/994949585657143296/995496698086432838">Quest Announcements</a></li>
+</ul>
+<p>If you have valuable items to sell:
+- Go to the <a href="https://discord.com/channels/994949585657143296/997830621831368734">marketplace</a> in the kingdom street
+- Or look which <a href="../items/20_markets/">markets</a> are known in the world of chiania</p>
 
               
             </article>
