--- a/public/items/20_markets/index.html
+++ b/public/items/20_markets/index.html
@@ -590,12 +590,11 @@
 
 <h1 id="the-chianian-market">The Chianian Market</h1>
 <p><img alt="" class="full_pic" src="../../include/places/lores/market.jpg" style="width:600px;float:left;margin-right:20px;" />
-There is a lot of hustle and bustle on the market square. If you are looking for equipment follow the <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">blue duck</a></p>
+There is a lot of hustle and bustle on the <a href="https://discord.com/channels/994949585657143296/997830621831368734">market square</a>. Many adventurers are crowding in and haggle for the best prices. But the best merchant in the place is the <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">blue duck</a>. If you want good items follow the blue duck:</p>
 <p><a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch" target="_blank" markdown="1">
 <img alt="" src="../../include/dexie-logo-styled.png" style="height:128px" />
 </a></p>
-<p>You can go to <a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">The garden of NFTs</a> and to the <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">magic fortune tellers of space</a> to see which valuable goods are known to the world.</p>
-<p>Also you can <a href="https://discord.com/channels/994949585657143296/997830621831368734">directly meet other brave adventurers and trade with them</a>.</p>
+<p>Also you can go to <a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">The garden of NFTs</a> and to the <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">magic fortune tellers of space</a> to see which valuable goods are known to the world.</p>
 
               
             </article>
