--- a/public/items/20_markets/index.html
+++ b/public/items/20_markets/index.html
@@ -636,8 +636,42 @@
 <p>Also you can go to <a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">The garden of NFTs</a> and to the <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">magic fortune tellers of space</a> to see which valuable goods are known to the world.</p>
 <h2 id="the-black-market">The Black market</h2>
 <p>Speak to the people in <a href="https://discord.com/channels/994949585657143296/995483089881026631">the tavern</a> or to them that are <a href="https://discord.com/channels/994949585657143296/997830621831368734">wandering on the marketplace</a> maybe they can give you a good offer.</p>
-<p>And "psst look here!" maybe i have something for you
-- <a href="offers/catapult22_1_nft1ud00hyr3rxghm8yzwwq4ma7a9fwgxte83r825m6euz9e3wqtec6sz0vfg3_x_0.2XCH.offer"><img src="https://acdqa7ufkaysxhgxkys6tu4m2uv6z3lj7lxq5cvieqjoac7a.arweave.net/AIcAfoVQMSuc11Yl6dOM1Svs7W-n67_w6KqC_QS4Avg"></a></p>
+<p>And "psst look here in the boxes" maybe i have something for you:</p>
+<div class="market-box">
+  <div class="market-box-inner">
+    <div class="market-box-back">
+      <a class="black_market" href="../offers/catapult22_1_nft1ud00hyr3rxghm8yzwwq4ma7a9fwgxte83r825m6euz9e3wqtec6sz0vfg3_x_0.2XCH.offer">
+      <img src="https://acdqa7ufkaysxhgxkys6tu4m2uv6z3lj7lxq5cvieqjoac7a.arweave.net/AIcAfoVQMSuc11Yl6dOM1Svs7W-n67_w6KqC_QS4Avg" alt="Catapult" style="width:150px;height:150px;">
+      </a>
+    </div>
+    <div class="market-box-front">
+    </div>
+  </div>
+</div>
+<div class="market-box" style="float:left">
+  <div class="market-box-inner">
+    <div class="market-box-back">
+      <a class="black_market" href="../offers/khopesh09_1_nft1myhjwpkhle7hu49u06u37tgy8c346xrrktvm8nt2evdwsdt2fq9swhjpxf_x_0.35XCH.offer">
+      <img src="https://5vkzjihec5aiu2kxpcyhswo6zk6yuyjrtvig6byj3a22pwhx.arweave.net/7VWUoOQXQIppV3iw_eVneyr2KYT-GdUG8HCdg1p9j3Q" alt="Catapult" style="width:150px;height:150px;">
+      </a>
+    </div>
+    <div class="market-box-front">
+    </div>
+  </div>
+</div>
+<div class="market-box" style="float:left">
+  <div class="market-box-inner">
+    <div class="market-box-back">
+      <a class="black_market" href="../offers/khopesh20_1_nft1d74txv3uesxxvmdxfm59e9u6r888es0xsenk62zpc4s7neh605qsv50hp2_x_0.35XCH.offer">
+      <img src="https://qzdlypw6klqlorogiy64yyfjg2lfou264giu3yc2nqovxegcla.arweave.net/hka8Pt5S4LdFxkY9_zGCpNpZXU17hkU3gWmwdW5DCWI" alt="Catapult" style="width:150px;height:150px;">
+      </a>
+    </div>
+    <div class="market-box-front">
+    </div>
+  </div>
+</div>
+
+<hr style="clear:both">
 
               
             </article>
