--- a/public/items/20_markets/index.html
+++ b/public/items/20_markets/index.html
@@ -636,7 +636,7 @@
 <p>Also you can go to <a href="https://mintgarden.io/collections/chia-inventory-col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">The garden of NFTs</a> and to the <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">magic fortune tellers of space</a> to see which valuable goods are known to the world.</p>
 <h2 id="the-black-market">The Black market</h2>
 <p>Speak to the people in <a href="https://discord.com/channels/994949585657143296/995483089881026631">the tavern</a> or to them that are <a href="https://discord.com/channels/994949585657143296/997830621831368734">wandering on the marketplace</a> maybe they can give you a good offer.</p>
-<p>While you are wandering through the markets, suddenly a dark-clad whispers to you.</p>
+<p>While you are wandering through the markets, suddenly a dark-clad man whispers to you.</p>
 <p>"psst look here in the boxes, maybe i have something for you"</p>
 <p>He lifts the linen cloth from the table and 3 mysterious boxes appear under the table:</p>
 <div id="market-messages">
