--- a/public/items/20_markets/index.html
+++ b/public/items/20_markets/index.html
@@ -638,7 +638,7 @@
 <p>Speak to the people in <a href="https://discord.com/channels/994949585657143296/995483089881026631">the tavern</a> or to them that are <a href="https://discord.com/channels/994949585657143296/997830621831368734">wandering on the marketplace</a> maybe they can give you a good offer.</p>
 <p>While you are wandering through the markets, suddenly a dark-clad man whispers to you.</p>
 <p>"psst look here in the boxes, maybe i have something for you"</p>
-<p>He lifts the linen cloth from the table and 3 mysterious boxes appear under the table:</p>
+<p>He lifts the linen cloth from the table and mysterious boxes appear under the table:</p>
 <div id="market-messages">
 ...
 </div>
@@ -659,17 +659,6 @@
     <div class="market-box-back">
       <a class="black_market" href="../offers/khopesh09_1_nft1myhjwpkhle7hu49u06u37tgy8c346xrrktvm8nt2evdwsdt2fq9swhjpxf_x_0.35XCH.offer" name="Khopesh">
       <img src="https://5vkzjihec5aiu2kxpcyhswo6zk6yuyjrtvig6byj3a22pwhx.arweave.net/7VWUoOQXQIppV3iw_eVneyr2KYT-GdUG8HCdg1p9j3Q" alt="Khopesh" style="width:150px;height:150px;">
-      </a>
-    </div>
-    <div class="market-box-front">
-    </div>
-  </div>
-</div>
-<div class="market-box" style="float:left">
-  <div class="market-box-inner" name="Mysterious Box 3">
-    <div class="market-box-back">
-      <a class="black_market" href="../offers/khopesh20_1_nft1d74txv3uesxxvmdxfm59e9u6r888es0xsenk62zpc4s7neh605qsv50hp2_x_0.35XCH.offer" name="Khopesh">
-      <img src="https://qzdlypw6klqlorogiy64yyfjg2lfou264giu3yc2nqovxegcla.arweave.net/hka8Pt5S4LdFxkY9_zGCpNpZXU17hkU3gWmwdW5DCWI" alt="Khopesh" style="width:150px;height:150px;">
       </a>
     </div>
     <div class="market-box-front">
