--- a/public/02_story/index.html
+++ b/public/02_story/index.html
@@ -696,6 +696,10 @@ The volunteers that were able to kill a slime monster investigeted them further 
 The brave volunteers who got a monster nucleis went to the hut in the western woods where the master druid lives. They kocked at the door, nobody answered. They begun to search him. A few meters deeper in the woods they only found his corpse. The head of master druid was cut off and was threw five meter away from his body. "How master druid, a hemigod in Chiania, was killed?" More importantly, where's the reward of quest?</p>
 <hr style="clear:both">
 
+<p><img alt="" class="story_pic_right" src="https://media.discordapp.net/attachments/995496698086432838/1000906114025660496/Nuclei_Ring_01.gif" />
+A jeweler passed by the Blacksmith Shop, he was attracted by the glowing Monster Nucleis hold by volunteers. "If you give me these gems, I use the large ones to make rings or the medium ones to enhance your weapons." Says by the jeweler.</p>
+<hr style="clear:both">
+
 <h2 id="the-story-continues">The Story continues...</h2>
 <p>To get the latest news in chiania go to certain places:</p>
 <ul>
