--- a/public/00_tags/index.html
+++ b/public/00_tags/index.html
@@ -876,6 +876,19 @@
 <li><a href="../items/01_equipment/">Equipment</a></li>
 <li><a href="../items/02_collectables/">Collectables</a></li>
 <li><a href="../items/20_markets/">Market</a></li>
+<li><a href="../items/50_types/">Item Types</a></li>
+<li><a href="../items/90_Barkshield/">Bark shield</a></li>
+<li><a href="../items/90_BraveSeedling/">Brave Seedling</a></li>
+<li><a href="../items/90_CannedSlime/">Canned Slime</a></li>
+<li><a href="../items/90_Catapult/">Catapult</a></li>
+<li><a href="../items/90_Deer/">Deer</a></li>
+<li><a href="../items/90_Khopesh/">Khopesh</a></li>
+<li><a href="../items/90_Knife/">Knife</a></li>
+<li><a href="../items/90_ShortAxe/">Short Axe</a></li>
+<li><a href="../items/90_ShortBow/">Short Bow</a></li>
+<li><a href="../items/90_Stone/">Stone</a></li>
+<li><a href="../items/90_Sword/">Sword</a></li>
+<li><a href="../items/90_WoodClub/">Wood Club</a></li>
 </ul>
 <h2 id="market"><span class="md-tag">Market</span></h2>
 <ul>
@@ -891,6 +904,19 @@
 <li><a href="../items/01_equipment/">Equipment</a></li>
 <li><a href="../items/02_collectables/">Collectables</a></li>
 <li><a href="../items/20_markets/">Market</a></li>
+<li><a href="../items/50_types/">Item Types</a></li>
+<li><a href="../items/90_Barkshield/">Bark shield</a></li>
+<li><a href="../items/90_BraveSeedling/">Brave Seedling</a></li>
+<li><a href="../items/90_CannedSlime/">Canned Slime</a></li>
+<li><a href="../items/90_Catapult/">Catapult</a></li>
+<li><a href="../items/90_Deer/">Deer</a></li>
+<li><a href="../items/90_Khopesh/">Khopesh</a></li>
+<li><a href="../items/90_Knife/">Knife</a></li>
+<li><a href="../items/90_ShortAxe/">Short Axe</a></li>
+<li><a href="../items/90_ShortBow/">Short Bow</a></li>
+<li><a href="../items/90_Stone/">Stone</a></li>
+<li><a href="../items/90_Sword/">Sword</a></li>
+<li><a href="../items/90_WoodClub/">Wood Club</a></li>
 </ul>
 <h2 id="story"><span class="md-tag">Story</span></h2>
 <ul>
