--- a/public/02_story/index.html
+++ b/public/02_story/index.html
@@ -831,7 +831,7 @@ The volunteers saw a first small glimpse of the threat approaching chiania. "We 
 <p><img alt="" class="story_pic_right" src="https://cdn.discordapp.com/attachments/995484176428044378/999473901346242590/Enhanced_Tree_Root_12.gif" style="" />
 The master druid holds aloft his wand, pure energy are emitted and hitted the ground. Tree roots abnormally grow and show up on the ground. These roots are surrounding by green and yellow magic. The druid ask volunteers to cut roots into sections as weapons.
 <img alt="" class="story_pic_left" src="../media/discord_pixel.png" style="max-width:100px;" />
-To organize themselves the volunteers now meet in <a href="https://discord.gg/YfgU3ueD">Discord square</a> in the <a href="https://discord.com/channels/994949585657143296/995483089881026631">magical tavern</a> named. They bind their souls to this magical place so that they can always come back to this place whereever they are.</p>
+To organize themselves the volunteers now meet in <a href="https://discord.com/channels/994949585657143296/995483089881026631">Kingdom Street in Viridis (the main city of Chiania)</a> in the <a href="https://discord.com/channels/994949585657143296/995483089881026631">magical tavern</a> named. They bind their souls to this magical place so that the goddess of Chiania can revive them there in the case they die.</p>
 <p>The now bigger an better equipped group went deeper in the black forest to reduce the slime population. They encountered a group of forest slimes...</p>
 <p>After a fierce battle, volunteers defeated a total of 20 Forest Slimes. Volunteers decided to enter the deep forest to hunt for stronger preys, Aquatic Slimes and Swamp Slimes</p>
 <hr style="clear:both">
