--- a/public/index.html
+++ b/public/index.html
@@ -893,9 +893,9 @@
 <h1 id="chiania-the-chia-inventory-rpg-game">Chiania - The Chia Inventory RPG Game</h1>
 <h2 id="introduction"><a href="https://discordapp.com/channels/994949585657143296/995478713561001984/995479550848933930">Introduction</a></h2>
 <p>"Chia Inventory" is a RPG-style NFT collection, with an unique NFT releasing conecpt: all of the NFTs are items generated during our RPG gaming process.</p>
-<p><a href="https://twitter.com/mrcic3">Green Whale</a> Is playing as a storyteller and blacksmith in this endless RPG game. He continuously releases stories, quests, and events. Players who bought our NFT equipment are able to  join endless quests and events, and win more NFTs for free.</p>
+<p><a href="https://twitter.com/mrcic3">Green Whale</a> Is playing as a storyteller and blacksmith in this endless RPG game. He continuously releases stories, quests, and events. Players who bought our NFT equipment are able to join endless quests and events, and win more NFTs for free.</p>
 <p>Players can also sell NFTs to allow newbies to join the game.</p>
-<p>So, this is the concept, an RPG style endless NFT sets. Fun and story are the core values of Chia Inventory. </p>
+<p>So, this is the concept, an endless Role Play Game with NFTs as items for your character and the world. Fun and story are the core values of Chia Inventory.</p>
 <h2 id="come-to-discord">Come to Discord</h2>
 <p>At this time "Chia Inventory - the Chianian Quest" is played in Discord.</p>
 <ul>
@@ -999,7 +999,7 @@ The stats of you character are rerolled at each quest. So your character can hav
 <p>This is the gaming loop so far:</p>
 <ul>
 <li><a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">You buy weapons / equipment when it is released (original offers on dexie.space)</a>.<ul>
-<li><a href="items/01_equipment.md">This are the weapon types you can get so far</a></li>
+<li><a href="items/50_types/">This are the weapon types you can get so far</a></li>
 </ul>
 </li>
 <li><a href="https://discordapp.com/channels/994949585657143296/995496698086432838">A quest is announced (Discord or Twitter)</a></li>
