--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="brave-seedling">Brave Seedling</h1>
 <ul>
-<li><a href="">Dexie - Brave Seedling</a></li>
+<li>Buy Brave Seedling at the blue duck: <a href="https://dexie.space/offers/col1jgw23rce22aucy0vrseqa3dte8sd0924sdjw5xuxzljcnhgr8fpqnjcu7q/xch">Dexie - Brave Seedling</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://sy6us4iumbsou3pirpsyws7yjhgjaxhexxqsrsbnpp5hu3z2.arweave.net/lj1JcRRgZOpt6Ivli0v-4ScyQXOS94SjILXv_6em86I"><br/>
