--- a/public/items/90_Deer/index.html
+++ b/public/items/90_Deer/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="deer">Deer</h1>
 <ul>
-<li><a href="">Dexie - Chreatures</a></li>
+<li>Buy Chreatures at the blue duck: <a href="https://dexie.space/offers/col1w0h8kkkh37sfvmhqgd4rac0m0llw4mwl69n53033h94fezjp6jaq4pcd3g/xch">Dexie - Chreatures</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://3hyv6canzscvnkhafiw5tgzucooeuvdabvrwpgmhs6xgr4m5l4ta.arweave.net/2fFfCA3MhVao4Cot2Zs0E5xKVGANY2eZh5euaPGdXyY"><br/>
