--- a/public/items/90_EnhancedTreeRoot/index.html
+++ b/public/items/90_EnhancedTreeRoot/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="enhanced-tree-root">Enhanced Tree Root</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://v4clvzdig4mcxpag5jbtzwkjz6tiy5igbr264crj7m5zik2mxa.arweave.net/rwS65Gg3GCu8BupDPNlJz6a_MdQYMde4KKfs7lCtMuA"><br/>
@@ -1355,6 +1355,13 @@
 <div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://2ahsdgo7gohremrjyatn5i2mwbajlr4cdk7r34w3ykt3sf4p.arweave.net/0A8hmd8zjxIyKcAm3qNMsECV_x4Iav_x3y28KnuRePo"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x0549e775fd3880653c065a069cb353e85fdb3a1b0b5072d9e999588d732c6e01"><strong>Name:</strong> Enhanced Tree Root 64</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Pierce:</strong> 1</div>
+<div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://mxjbrpsxgx3jgklf6srymhgakgzxslen44kjmdrkpgm626alr36a.arweave.net/ZdIYvlc19pMpZfSjhhzAUbN5LI3nFJYOKnmZ7XgLjvw"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x4759cafc9f9142591c398d29c96f47206f7758793d753169922591f7e8dc02ef"><strong>Name:</strong> Enhanced Tree Root 65</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
@@ -1567,13 +1574,6 @@
 <div class="item_thumbnail_detail">
 <img src="https://z57b3kurokgm44lxyxml2xgbpfdxd32uwcy7t65rpio3umtfaoxa.arweave.net/z34dqpFyjM5xd8XYvVzBeUdx71Swsfn7sXodujJlA64"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x74ced371f2f12e0f340176c00685379e418a12cf715c1af5ec951a1deec4bf24"><strong>Name:</strong> Enhanced Tree Root 92</a></div>
-<div><strong>Collection:</strong> Chia Inventory</div>
-<div><strong>Pierce:</strong> 1</div>
-<div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://h5su7skh6yol3fsotgdhfxj3rb6h3y5tl6awbt4f3ltau5el.arweave.net/P2-VPyUf_2HL2WTpmGct07iHx947NfgWDPhdrmCnSLA"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x29ed738bf6dd1e1cbf2c2b0605f5ab4bdf0ba9bb62278fdf4e6ca7363406ff22"><strong>Name:</strong> Enhanced Tree Root 93</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
 <div><strong>Pierce:</strong> 1</div>
 <div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
