--- a/public/items/90_OrangeNucleiWoodClub/index.html
+++ b/public/items/90_OrangeNucleiWoodClub/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="orange-nuclei-wood-club">Orange Nuclei Wood Club</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://zzxkjbbdkgcgomldkdsqca7gymxigwyydc3dz6l5qnkwr6mg4xzq.arweave.net/zm6khCNRhGcxY1DlAQPmwy6DWxgYtjz5fYNVaPmG5fM"><br/>
