--- a/public/items/90_BarkShield/index.html
+++ b/public/items/90_BarkShield/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="bark-shield">Bark Shield</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://yd52io3xnvjeigygoptf5or2uqqqpaz6uj3rxwryea4ifbst.arweave.net/wPukO3dtUkQ-bBnPmXro6pCEHgz6idxvaOCA4goZ-T4"><br/>
