--- a/public/items/90_CannedSlime/index.html
+++ b/public/items/90_CannedSlime/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="canned-slime">Canned Slime</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://p47dgfsaa5qtuumnfxsyjc7kxt3jfmjk2zaqv2ptrqca.arweave.net/fz4zFkAHY-TpR-jS3lh_IvqvPaSsS_-rWQQrp84w_Eg"><br/>
