--- a/public/items/90_Catapult/index.html
+++ b/public/items/90_Catapult/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="catapult">Catapult</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://xmljdtjeswz5bkzfedsujrjuq2ebw2uocnxrbtlslxc5w3nt.arweave.net/_uxaRzSS_Vs9CrJSDlRMU0hogbao4TbxDNcl3F222zo"><br/>
