--- a/public/items/90_GreenNucleiKnife/index.html
+++ b/public/items/90_GreenNucleiKnife/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="green-nuclei-knife">Green Nuclei Knife</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://5aq4pd3rj2l5vky4jlxu2tuzv6kzdwbrisz2fhdud4thi3ht.arweave.net/-6C_HHj3FOl9qrHErvTU6Zr5WR2DFEs6KcdB8mdGzzI"><br/>
