--- a/public/items/90_Khopesh/index.html
+++ b/public/items/90_Khopesh/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="khopesh">Khopesh</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://djgsyqpanctscxxhtp6klqckmlygdclm6acdkxshk2fdphfmwy.arweave.net/Gk0sQeBopyFe55_v8pcBKYvBhiWzwBDVeR1aKN5ysts"><br/>
