--- a/public/items/90_MagicRoot/index.html
+++ b/public/items/90_MagicRoot/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="magic-root">Magic Root</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://g3besa3udzok3iz4dbboefkpzxwny462bwqf4oasrbmmenz3aa.arweave.net/NsJJA3QeXK2jPBhC4hVPzezcc9oNoF44EohYwjc7-AM"><br/>
