--- a/public/items/90_MediumMonsterNuclei/index.html
+++ b/public/items/90_MediumMonsterNuclei/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="medium-monster-nuclei">Medium Monster Nuclei</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://tigzvievl3bjpvmhpj4re6lpvdk57gakm6iw3fnifpf6s4yn.arweave.net/mg2aoJVewpfVh3p5EnlvqNXf-mAp-nkW2VqCvL6XMNE"><br/>
