--- a/public/items/90_NucleiRing/index.html
+++ b/public/items/90_NucleiRing/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="nuclei-ring">Nuclei Ring</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://lmsctphmbooladpu6lxrvi44stiw4gjkwqt3u6qe62zyponiwe.arweave.net/WyQpvOwLnLAN_9PLvGqOclNFuGSq0J7p6BPazh7mosY"><br/>
