--- a/public/items/90_RedNucleiSword/index.html
+++ b/public/items/90_RedNucleiSword/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="red-nuclei-sword">Red Nuclei Sword</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://i6b5oljksfziqkgn3cta7ntntqboilc6i6stfvwwznwutpunm4.arweave.net/R4PXLSqRcogozdimD7ZtnALkLF-5HpTLW1sttSb6NZ0"><br/>
