--- a/public/items/90_ShadowSword/index.html
+++ b/public/items/90_ShadowSword/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="shadow-sword">Shadow Sword</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://qu5hfuo5icczlrdyw4a55bdiw7ivp5usk52kt4dm5tk6yienrq.arweave.net/hTpy0d1AhZXEeLcB3oRot9FX9pJXdKnwbOzV7CCN-jA"><br/>
