--- a/public/items/90_SmallMonsterNuclei/index.html
+++ b/public/items/90_SmallMonsterNuclei/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="small-monster-nuclei">Small Monster Nuclei</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://wgyl3e3wfirnyuy6qti7amonvhkoymw5lzuq4bstly23rvtm.arweave.net/sbC9k3YqItxT-HoTR8DHNqdTsMt-1eaQ4G_U141uNZs"><br/>
