--- a/public/items/90_Stone/index.html
+++ b/public/items/90_Stone/index.html
@@ -904,7 +904,7 @@
 
 <h1 id="stone">Stone</h1>
 <ul>
-<li><a href="">Dexie - Chia Inventory</a></li>
+<li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
 <img src="https://djxxkjx52yigcm7sorhjvkr2xrtestgpddftrhd5pwwfuuvp.arweave.net/Gm9_1Jv3W_EGEz8nROmqo6vGZJTM8YyzicfX2sWlKvE"><br/>
