publish: some styling

--- a/public/04_world/index.html
+++ b/public/04_world/index.html
@@ -1063,22 +1063,22 @@
 <h2 id="viridis-main-city">Viridis (Main City)</h2>
 <h3 id="kingdom-street">Kingdom Street</h3>
 <h4 id="the-market-place"><a href="https://discord.com/channels/994949585657143296/997830621831368734">The Market Place</a></h4>
-<p><img alt="" class="story_pic_left" src="../include/places/lores/market.jpg" style="max-width:600px;" />
+<p><img alt="" class="story_pic_left" src="../include/places/lores/market.jpg" style="max-width:100%;" />
 There is a lot of hustle and bustle on the <a href="https://discord.com/channels/994949585657143296/997830621831368734">market square</a>. Numerous adventurers offer theier hard-earned wares here. Also there are some professional merchants. Go to the <a href="../items/20_markets/">markets</a> to see where you can trade your goods.</p>
 <hr style="clear:both;"/>
 
 <h4 id="the-tavern"><a href="https://discord.com/channels/994949585657143296/995483089881026631">The Tavern</a></h4>
-<p><img alt="" class="story_pic_right" src="../include/places/lores/medieval-tavern.png" style="max-width:600px;width:500px;" />
+<p><img alt="" class="story_pic_right" src="../include/places/lores/medieval-tavern.png" style="max-width:100%;width:500px;" />
 Volunteers, adventurers and soldiers are meeting in <a href="https://discord.com/channels/994949585657143296/995483089881026631">the 🍺tavern</a> to organize and talk about adventures they lived through. You can meet many interesting people from allover the kingdom here. There are also people capable of writing magic runes in <a href="https://discord.com/channels/994949585657143296/997649414787182662">the 🍺tavern-中文</a>. Maybe you can hear some rumours about things going on in chiania </p>
 <hr style="clear:both;"/>
 
 <h4 id="the-weapon-rack"><a href="https://discord.com/channels/994949585657143296/995497833216102440">The Weapon Rack</a></h4>
-<p><img alt="" class="story_pic_left" src="../include/places/lores/weapon-chamber.png" style="max-width:600px;width:500px" />
+<p><img alt="" class="story_pic_left" src="../include/places/lores/weapon-chamber.png" style="max-width:100%;width:500px" />
 Chiania main city normally is a peaceful place. Adventurers and solders are storing their equipment at the <a href="https://discord.com/channels/994949585657143296/995497833216102440">weapon-rack</a> when they don't need them. They show off their equipment and possibly <a href="../items/20_markets/">trading opportunities</a> may arise.</p>
 <hr style="clear:both;"/>
 
 <h3 id="adventurers-alley">Adventurers Alley</h3>
-<p><img alt="" class="story_pic_right" src="../include/places/lores/stable-deers.png" style="max-width:600px;width:500px" /></p>
+<p><img alt="" class="story_pic_right" src="../include/places/lores/stable-deers.png" style="max-width:100%;width:500px" /></p>
 <h4 id="stables">Stables</h4>
 <p>In the stables you can find some creatures that help you in your adventures. Horse breeding was given up a few years ago. But recently the Stable Master got in some beautiful <a href="https://dexie.space/offers/col1w0h8kkkh37sfvmhqgd4rac0m0llw4mwl69n53033h94fezjp6jaq4pcd3g/xch">Deers</a>. They were saved by the Slimy Monsters in the <a href="#black-forest">Black Forest</a>. The animals are strong enough to ride on. <a href="https://dexie.space/offers/col1w0h8kkkh37sfvmhqgd4rac0m0llw4mwl69n53033h94fezjp6jaq4pcd3g/xch">They need a new owner who will take good care of them</a></p>
 <hr style="clear:both;"/>
