--- a/public/world/01_map/index.html
+++ b/public/world/01_map/index.html
@@ -996,6 +996,11 @@
 
 
 <h1 id="map">Map</h1>
+<div style="background-image: url(../include/map-background-overgrown-temple.png)">
+<p>Test Begin</p>
+<p><img alt="" src="../include/chiania_world_map.drawio.svg" /></p>
+<p>Test End</p>
+</div>
 
               
             </article>
