--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -2226,6 +2226,16 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://auhs75kxv6zsu4vjooe4spvnjs6i4f4ynappkv6hoxxiztrbsu.arweave.net/BQ8v9VevsypyqXOJyT6tTLyOF5hoHvV_Xx3XujM4hlU"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x51285cac2de1b7980fe3873175a7f8e7c4639d13e344b8041333a0ad96a8e186"><strong>Name:</strong> Brave Seedling #160</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>background:</strong> dream purple</div>
+<div><strong>decoration:</strong> none</div>
+<div><strong>seedling:</strong> purple variation</div>
+<div><strong>soil:</strong> amethyst</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://lcqyrx2t3c4dkqcme3eidtjphdvfkkkixhqrcfynyz67nyddhugq.arweave.net/WKGI31PYuDVATCbIgc0vOOpVKUi54REXDcZ99uBjPQ0"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x5945c2732aa5744e54e491ceed7e09cbbb3f14aba4fcc3a1ef72313d3a6281ca"><strong>Name:</strong> Brave Seedling #161</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -4056,16 +4066,6 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://unedw6qpgei45ulyx243c6gkjinnw4knufai5g6b5xl62kiaku.arweave.net/o0g7eg8xEc7ReL65s-XjKShrbcU2hQI6bwe3X7SkAVY"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xa52fe0501d4588a80cb3c5346afa574f4532894774fc3d603cf04e3b82836499"><strong>Name:</strong> Brave Seedling #344</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> cosmic blue</div>
-<div><strong>decoration:</strong> drip below</div>
-<div><strong>seedling:</strong> green health</div>
-<div><strong>soil:</strong> moon well</div>
-<div><strong>Description:</strong> </div>
-</div>
-<div class="item_thumbnail_detail">
 <img src="https://tvw4rrw6xhjm3ftbsx4lhhwtzb4tbpbbacjctttgewca.arweave.net/nW3Ixt650_s2WYZ_X_4s_57TyH-kwvCEAkinOZi-WEk"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x8fa3369c952ee838f51a86603b9bb2478d368e485aa9280b84355d77fea5ca5a"><strong>Name:</strong> Brave Seedling #345</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -4445,6 +4445,16 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://zmnm55ityma4l5isinekznt2pmkzgd52jme3mkoecm62gyibpnza.arweave.net/yxrO9RPDAcX1EkNIrLZ6exWTD7pLCbYpxBM9o2EBe3I"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x07e840e69fb9187bc6ef3f6ae031381972f4f96020e39ddff06a34f546046c5f"><strong>Name:</strong> Brave Seedling #382</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>background:</strong> swamp green</div>
+<div><strong>decoration:</strong> yellow spots</div>
+<div><strong>seedling:</strong> green young</div>
+<div><strong>soil:</strong> green wetlands</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://lbzpyiv5zy2wmqv4r2o3egsj5pj3i6ema5xcsipitvntwugffm.arweave.net/WHL8Ir_3ONWZCvI6dshpJ69O0eIwHbikh6J1bO1DFK0"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xf01a57f2915853c032eb25259925840329a95939bb61d9be7043d58de97468c0"><strong>Name:</strong> Brave Seedling #383</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -4741,16 +4751,6 @@
 <div><strong>decoration:</strong> nourish</div>
 <div><strong>seedling:</strong> green strong</div>
 <div><strong>soil:</strong> green swamp</div>
-<div><strong>Description:</strong> </div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://nw2ysvrrn6reva4zegvquggv4gnu2vorbjtzhwbckpdfgug63u.arweave.net/bbWJVjFvokqDmSGrChjV4ZtNVdEKZ5PYIlPGU_1De3Y"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x2e523824ca3ee91d01f793d8f41fe81a012e50ff493f9257ff521413b0a3d716"><strong>Name:</strong> Brave Seedling #412</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> swamp green</div>
-<div><strong>decoration:</strong> drip below</div>
-<div><strong>seedling:</strong> green health</div>
-<div><strong>soil:</strong> moon well</div>
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
@@ -8488,6 +8488,16 @@
 <div><strong>soil:</strong> elon</div>
 <div><strong>vine:</strong> green</div>
 <div><strong>Description:</strong> Humanity will reach Mars in your lifetime.</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://25ssx4zfj2klz3qaycdfzvonufgeyqi5kexgmgxlazu2kcko.arweave.net/12Ur8yVOlLzuAMCGXNXNoUxMQR1_RLmYa-6wZppQlOk"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x49f2b3af2b547b5caf0a4de9108341ae23dc9ed086036c24946dafc94389263d"><strong>Name:</strong> Brave Seedling #800</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>background:</strong> blue sky</div>
+<div><strong>decoration:</strong> lucky cloud</div>
+<div><strong>seedling:</strong> dancer</div>
+<div><strong>soil:</strong> ruij1a</div>
+<div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
 <img src="https://a6ajpx2ymjnx2lt7smdkkyxpkm2ilj4zd2re6qolbf65ewom.arweave.net/B4CX3_1hiW30uf5MGpWLvUzSFp5ke-ok9By-wl90lnM"><br/>
